# mwablab

./: .gitignore  Dockerfile  flake.nix
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
analysis/: julia-track-recon.md
analysis/architecture/: decisions.md
docs/: build.sh
docs/content/: getting-started.md  index.md
docs/content/foundations/: bifunctor.md  braided-monoidal.md  category.md  functor.md  monoidal-category.md  natural-isomorphism.md  natural-transformation.md  opposite.md  product-category.md  symmetric-monoidal.md
docs/css/: style.css
docs/css/themes/: catppuccin.css  dracula.css  gruvbox.css  nord.css  tokyo-night.css
docs/templates/: default.html
scripts/: verify.sh
src/agda/: Everything.agda  mwablab.agda-lib
src/agda/Cat/: Bifunctor.agda  BraidedMonoidal.agda  Category.agda  Functor.agda  Monoidal.agda  NaturalIsomorphism.agda  NaturalTransformation.agda  Opposite.agda  Product.agda  SymmetricMonoidal.agda
src/haskell/: mwablab.cabal
src/haskell/src/Cat/: Bifunctor.hs  BraidedMonoidal.hs  Category.hs  Examples.hs  Functor.hs  Monoidal.hs  NaturalIsomorphism.hs  NaturalTransformation.hs  Opposite.hs  Product.hs  SymmetricMonoidal.hs
src/haskell/src/Cat/Examples/: Monoidal.hs
src/haskell/test/: Main.hs
src/haskell/test/Cat/: BifunctorSpec.hs  BraidedMonoidalSpec.hs  CategorySpec.hs  FunctorSpec.hs  MonoidalSpec.hs  NaturalIsomorphismSpec.hs  NaturalTransformationSpec.hs  OppositeSpec.hs  ProductSpec.hs  SymmetricMonoidalSpec.hs
src/haskell/test/Cat/Examples/: MonoidalSpec.hs
src/julia/: Manifest.toml  Project.toml
src/julia/src/: Bifunctor.jl  BraidedMonoidal.jl  Category.jl  Examples.jl  Functor.jl  Monoidal.jl  MwabLab.jl  NaturalIsomorphism.jl  NaturalTransformation.jl  Opposite.jl  Product.jl  SymmetricMonoidal.jl
src/julia/test/: runtests.jl  test_category.jl  test_monoidal.jl
src/lisp/: mwablab.asd
src/lisp/src/: bifunctor.lisp  braided-monoidal.lisp  category.lisp  examples.lisp  functor.lisp  monoidal-category.lisp  natural-isomorphism.lisp  natural-transformation.lisp  opposite.lisp  package.lisp  product-category.lisp  symmetric-monoidal.lisp
src/spec/: Makefile  preamble.tex
src/spec/foundations/: bifunctor.tex  braided-monoidal.tex  category.tex  functor.tex  monoidal-category.tex  natural-isomorphism.tex  natural-transformation.tex  opposite.tex  product-category.tex  symmetric-monoidal.tex
tools/: semtex.py
tools/semtex-hs/: semtex.cabal
tools/semtex-hs/app/: Main.hs
tools/semtex-hs/src/Semtex/: Extract.hs  Graph.hs  Json.hs  MathJax.hs  Merge.hs  Site.hs  SymbolTrack.hs  Types.hs  Uid.hs  Validate.hs
tools/semtex-hs/src/Semtex/Extract/: Atoms.hs  Parser.hs
