cabal-version:   3.0
name:            semtex
version:         0.2.0.0
synopsis:        Semantic TeX preprocessor for mwablab concept graphs
license:         BSD-3-Clause
build-type:      Simple

common shared
  default-language: GHC2021
  default-extensions:
    DerivingStrategies
    OverloadedStrings
  ghc-options: -Wall -Wcompat

library semtex-lib
  import:         shared
  hs-source-dirs: src
  visibility:     private
  exposed-modules:
    Semtex.Types
    Semtex.Extract
    Semtex.Extract.Parser
    Semtex.Extract.Atoms
    Semtex.Graph
    Semtex.Merge
    Semtex.Validate
    Semtex.MathJax
    Semtex.Json
    Semtex.Uid
    Semtex.SymbolTrack
    Semtex.Site

  build-depends:
    base >= 4.18 && < 5,
    aeson >= 2.2 && < 2.3,
    bytestring,
    containers,
    directory,
    filepath,
    megaparsec >= 9.6 && < 9.8,
    optparse-applicative >= 0.18 && < 0.19,
    process,
    temporary,
    text,
    time

executable semtex
  import:         shared
  hs-source-dirs: app
  main-is:        Main.hs

  build-depends:
    base >= 4.18 && < 5,
    optparse-applicative >= 0.18 && < 0.19,
    semtex:semtex-lib,
    text
